--- a/src/pages/agendacim/agendacim.html
+++ b/src/pages/agendacim/agendacim.html
@@ -22,9 +22,9 @@
     </div>
   </ion-list>
 
-  <ion-fab bottom right>
+  <!--<ion-fab bottom right>
       <button ion-fab color="primary" (click)="newNoticia()">
         <ion-icon name="add"></ion-icon>
       </button>
-    </ion-fab>
+    </ion-fab>-->
 </ion-content>
