--- a/src/pages/homeinformacim/homeinformacim.html
+++ b/src/pages/homeinformacim/homeinformacim.html
@@ -54,10 +54,10 @@
   </ion-list>
 
 
-  <ion-fab bottom right>
+  <!--<ion-fab bottom right>
     <button ion-fab color="primary" (click)="newNoticia()">
       <ion-icon name="add"></ion-icon>
     </button>
-  </ion-fab>
+  </ion-fab>-->
 
 </ion-content>
