--- a/src/pages/modalcurso/modalcurso.html
+++ b/src/pages/modalcurso/modalcurso.html
@@ -11,17 +11,16 @@
 
 </ion-header>
 
-
 <ion-content style="background-color: #eeeeee">
   <ion-card-content>
     <img src="{{curso.imagem}}" />
+    <h6><b>Curso: &nbsp;</b>{{curso.titulo}}</h6>
     <h6><b>Local: &nbsp;</b>{{curso.localizacao}}</h6>
-    <p style="text-align: justify; font-size:medium;">{{curso.descricao}}</p>
-    <h6><b>Ministrante: &nbsp;</b> {{curso.ministrante}}</h6>
-    <p style="text-align: justify; font-size:medium;" *ngIf="curso.resumoProfissional != undefined  && curso.resumoProfissional != 'undefined' && curso.resumoProfissional != null && curso.resumoProfissional != ''">
-      {{curso.resumoProfissional}}
-    </p>
-    <h6><b>Investimento:</b></h6>
+    <h6><b>Horário: &nbsp;</b>{{curso.horario}}</h6>
+    <h6><b>Facilitador: &nbsp;</b> {{curso.facilitador}}</h6>
+    <h6><b>Carga horária: &nbsp;</b>{{curso.cargaHoraria}}</h6>
+
+    <h6 style="text-align: center;"><b>Investimento</b></h6>
     <h6><i>MEI associado -</i> &nbsp; {{curso.valormeiassociado}}</h6>
     <h6><i>MEI não associado -</i> &nbsp; {{curso.valormeianaossociado}}</h6>
     <h6><i>Empresa associada -</i> &nbsp; {{curso.valorempresaassociada}}</h6>
@@ -29,6 +28,29 @@
     <h6 *ngIf="curso.valorpessoafisica != undefined && curso.valorpessoafisica != 'undefined' && curso.valorpessoafisica != null && curso.valorpessoafisica != ''">
       <i>Pessoa Física -</i> &nbsp; {{curso.valorpessoafisica}}
     </h6>
+
+    <h6 style="text-align: center;" *ngIf="curso.objetivo != undefined  && curso.objetivo != 'undefined' && curso.objetivo != null && curso.objetivo != ''"><b>Objetivo</b></h6>
+    <p style="text-align: justify; font-size:medium;" *ngIf="curso.objetivo != undefined  && curso.objetivo != 'undefined' && curso.objetivo != null && curso.objetivo != ''">
+      {{curso.objetivo}}
+    </p>
+
+    <h6 style="text-align: center;" *ngIf="curso.publicoAlvo != undefined  && curso.publicoAlvo != 'undefined' && curso.publicoAlvo != null && curso.publicoAlvo != ''"><b>Público Alvo</b></h6>
+    <p style="text-align: justify; font-size:medium;" *ngIf="curso.publicoAlvo != undefined  && curso.publicoAlvo != 'undefined' && curso.publicoAlvo != null && curso.publicoAlvo != ''">
+      {{curso.publicoAlvo}}
+    </p>
+
+    <h6 style="text-align: center;" *ngIf="curso.temasAbordados != undefined  && curso.temasAbordados != 'undefined' && curso.temasAbordados != null && curso.temasAbordados != ''"><b>Temas Abordados</b></h6>
+    <div style="text-align: justify; font-size:medium;" *ngFor="let tema of temasAbordadosSplit">
+     <label style="white-space: normal;" *ngIf="tema != '' && tema != 'undefined'">
+      {{tema}};
+     </label> 
+    </div>
+
+    <h6 style="text-align: center;" *ngIf="curso.resumoProfissional != undefined  && curso.resumoProfissional != 'undefined' && curso.resumoProfissional != null && curso.resumoProfissional != ''"><b>Facilitador</b></h6>
+    <p style="text-align: justify; font-size:medium;" *ngIf="curso.resumoProfissional != undefined  && curso.resumoProfissional != 'undefined' && curso.resumoProfissional != null && curso.resumoProfissional != ''">
+      {{curso.resumoProfissional}}
+    </p>
+    
     <h6>
       <a *ngIf="curso.link != 'undefined' && curso.link != '' && curso.link != null" (click)="abrirLink()">Link de
         inscrição</a>
