--- a/src/pages/novanoticia/novanoticia.html
+++ b/src/pages/novanoticia/novanoticia.html
@@ -1,4 +1,3 @@
-
 <ion-header>
 
   <ion-navbar color="primary">
@@ -9,13 +8,14 @@
 
 <ion-content padding>
 
-  <form #noticiaForm="ngForm" [formGroup]="form" (submit)="onSubmit(); noticiaForm.reset(); contact.imagem = '';">
+  <form #noticiaForm="ngForm" [formGroup]="form" (submit)="onSubmit();">
 
     <ion-item>
       <ion-label stacked> Autor </ion-label>
-      <ion-input type= "text" formControlName="autor"></ion-input>
+      <ion-input type="text" formControlName="autor"></ion-input>
     </ion-item>
-    <ion-item *ngIf="!form.controls.autor.valid && (form.controls.autor.dirty || form.controls.autor.touched)" color="danger">
+    <ion-item *ngIf="!form.controls.autor.valid && (form.controls.autor.dirty || form.controls.autor.touched)"
+      color="danger">
       <div>
         O campo é obrigatório
       </div>
@@ -23,9 +23,10 @@
 
     <ion-item>
       <ion-label stacked> Título </ion-label>
-      <ion-input type= "text" formControlName="titulo"></ion-input>
+      <ion-input type="text" formControlName="titulo"></ion-input>
     </ion-item>
-    <ion-item *ngIf="!form.controls.titulo.valid && (form.controls.titulo.dirty || form.controls.titulo.touched)" color="danger">
+    <ion-item *ngIf="!form.controls.titulo.valid && (form.controls.titulo.dirty || form.controls.titulo.touched)"
+      color="danger">
       <div>
         O campo é obrigatório
       </div>
@@ -33,26 +34,37 @@
 
     <ion-item>
       <ion-label stacked> Texto Completo </ion-label>
-      <ion-textarea autosize type= "text" formControlName="textoCompleto"></ion-textarea>
+      <ion-textarea autosize type="text" formControlName="textoCompleto"></ion-textarea>
     </ion-item>
 
     <ion-item [hidden]="!!myDate">
-          <ion-label>Date</ion-label>
-          <ion-datetime displayFormat="DD/MM/YYYY" pickerFormat="DD/MM/YYYY" formControlName="horario"></ion-datetime>
-        </ion-item>
+      <ion-label stacked>Data</ion-label>
+      <ion-datetime displayFormat="DD/MM/YYYY" pickerFormat="DD/MM/YYYY" formControlName="horario"></ion-datetime>
+    </ion-item>
 
-        <ion-item (click)="openGallery()">
-          <ion-label style="color:#999" stacked>Imagem:&nbsp; &nbsp;Escolha uma imagem</ion-label>
-          <ion-input style="visibility: hidden;" formControlName="imagem" value="{{this.contact.imagem}}"></ion-input>
-        </ion-item>
-    
-        <div *ngIf="this.contact.imagem" class="imagem">
-          <img [src]='this.contact.imagem' />
-        </div>
+    <ion-item>
+      <ion-label stacked> Link Para Notícia Completa </ion-label>
+      <ion-input type="text" formControlName="link"></ion-input>
+    </ion-item>
+    <ion-item *ngIf="!form.controls.link.valid && (form.controls.link.dirty || form.controls.link.touched)"
+      color="danger">
+      <div>
+        O campo é obrigatório
+      </div>
+    </ion-item>
+
+    <ion-item (click)="openGallery()">
+      <ion-label style="color:#999" stacked>Imagem:&nbsp; &nbsp;Escolha uma imagem</ion-label>
+      <ion-input style="visibility: hidden;" formControlName="imagem" value="{{this.contact.imagem}}"></ion-input>
+    </ion-item>
+
+    <div *ngIf="this.contact.imagem" class="imagem">
+      <img [src]='this.contact.imagem' />
+    </div>
 
     <div padding>
       <button ion-button block type="submit" [disabled]="!form.valid"> Salvar </button>
-      </div>
+    </div>
 
   </form>
 </ion-content>
